# filters

./: .gitignore  CMakeLists.txt  README.md
example/: example.cpp
filters/implementations/lightAI/: CMakeLists.txt  Struct.drawio
filters/implementations/lightAI/core/: .filterMLP.hpp.swp  filterMLP.cpp  filterMLP.hpp  layer.cpp  layer.hpp  lightAI.cpp  lightAI.hpp
filters/implementations/lightAI/utils/: activations.hpp  onlineNormalizer.hpp  windowBuffer.hpp
filters/include/: approximation.hpp  filter.h  filter.hpp  filterEMF.hpp  filterHAAR.hpp  filterMAF.hpp  filterMLP.hpp  filterMedian.hpp  filterTypes.h  filterTypes.hpp  helpers.h  helpers.hpp  signalContainer.h  signalContainer.hpp
filters/src/: filter.cpp  helpers.cpp  signalContainer.cpp
include/filters/: filter.hpp  filterButterworth.hpp  filterHAAR.hpp  filterKalman.hpp  filterMAF.hpp  filterMLP.hpp  filterMedian.hpp  filterSeq2Seq.hpp  filterTypes.hpp
src/: filterMLP_inst.cpp  filterSeq2Seq_inst.cpp
